--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
         </div>
         
         <div class="p-info-right">
-            <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam lacus augue, convallis ac dolor a, pharetra vehicula dui. Sed ornare velit aliquam, commodo turpis non, vestibulum lacus. Mauris vel urna nec odio condimentum dictum vel vitae libero. Duis sed volutpat eros. Morbi ullamcorper magna facilisis fermentum vestibulum. Sed sagittis varius bibendum. Suspendisse auctor maximus ex, eu pharetra ipsum laoreet nec. Nullam dictum vulputate nisi, non pharetra diam facilisis ac. Suspendisse mi ante, dignissim quis efficitur non, porttitor sit amet purus. Pellentesque eu augue mollis, ultricies nunc a, sodales lorem. Maecenas euismod sit amet est semper sagittis. Sed quis ipsum lorem. Maecenas eu ipsum varius, semper ante a, ultricies eros. Praesent suscipit metus metus, eget vulputate tellus vulputate a. Nulla pharetra accumsan odio at scelerisque. Etiam sit amet eleifend felis, sit amet consectetur ante. Nam ut eros dui. Maecenas non suscipit orci. Vivamus quis ipsum erat. Donec eros mi, facilisis quis eros ut, scelerisque vulputate erat. Suspendisse quis sapien erat. Vivamus ullamcorper hendrerit convallis. Phasellus id elementum mi. Phasellus elit ante, porttitor nec vulputate non, sollicitudin ut massa.</div>
+            <div>I'm a student of Chico State's class of 2024 now pursuing my Master's in Computer Science having received my Bachelors. I was first introduced to programming when I was a Senior in high school. Not knowing what direction I wanted to take my college career, I decided to take an introductory course in Python programming. Right then I knew that I wanted to learn more about Computer Science. Since then I have learned C++/C, JavaScript, HTML/CSS, ML/AI, Web Development, Cybersecurity and more. These days I'm working hard to become a full-stack developer. This website is a minor testament to that progress.</div>
+            <div>Aside from programming, I enjoy learning guitar and listening to new music styles. I hope to someday build an awesome guitar collection and produce my own music. I'm also a huge fan of motorsports - especially F1.</div>
             <div class="download-button">
                 <a href="./img/Resume - AUG2024.pdf" target="_blank" download="Anthony Pecoraro Resume">DOWNLOAD RESUME</a>
             </div>
@@ -57,25 +58,28 @@
         <div class="ed-masters">
             <p class="school-name">California State University, Chico</p>
             <p><em>Master's Degree | 2024-Present</em></p>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus repellat hic architecto rerum perferendis pariatur nulla sapiente cupiditate eos alias in, quasi velit dolorum. Est dolore voluptatem corrupti laboriosam at.</p>
+            <p><strong>Major:</strong> Computer Science</p>
+            <p><strong>Relevant Coursework:</strong> Web Technology, DevOps Engineering, Algorithms and Computability</p>
         </div>
 
         <div class="ed-bachelors">
             <p class="school-name">California State University, Chico</p>
-            <p><em>Bachelor's Degree | 2022-2024</em></p>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus repellat hic architecto rerum perferendis pariatur nulla sapiente cupiditate eos alias in, quasi velit dolorum. Est dolore voluptatem corrupti laboriosam at.</p>
+            <p><em>Bachelor's Degree | 2022-2024 | Cum Laude</em></p>
+            <p><strong>Major:</strong> Computer Science</p>
+            <p><strong>Relevant Coursework:</strong> Databases, Algorithms and Data Structures (+Advanced), Computer Networks, Cybersecurity, Mobile/Web Application Development, Quantum Computing, ML, AI, Software Engineering, Operating Systems, Compiler Design, Numerical/Parallel Programming (HPC), Usability Engineering</p>
         </div>
 
         <div class="ed-associates">
             <p class="school-name">De Anza College</p>
             <p><em>Associate's Degree for Transfer | 2020-2022</em></p>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus repellat hic architecto rerum perferendis pariatur nulla sapiente cupiditate eos alias in, quasi velit dolorum. Est dolore voluptatem corrupti laboriosam at.</p>
+            <p><strong>Major:</strong> Computer Science</p>
+            <p><strong>Relevant Coursework:</strong> Programming Methodologies in C++ (Beginning, Intermediate, Advanced), Precalculus III: Advanced Topics, Data Abstraction and Structures, Discrete Mathematics, x86 Processor Assembly Language and Computer Architecture, Calculus (I, II, III), Physics for Scientists and Engineers: (Mechanics & Electricity and Magnetism)</p>
         </div>
 
         <div class="ed-hs">
             <p class="school-name">Bellarmine College Preparatory</p>
             <p><em>High School Diploma | 2016-2020</em></p>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus repellat hic architecto rerum perferendis pariatur nulla sapiente cupiditate eos alias in, quasi velit dolorum. Est dolore voluptatem corrupti laboriosam at.</p>
+            <p><strong>Relevant Coursework:</strong> Introduction to Python</p>
         </div>
     </div>
 
