Add Content to Experience and Project sections
Inserted content into the experience and project sections as well as styling the footer. The project section has a bare layout of what each project card will look like.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <div class="p-info-container">
         <div class="p-info-left">
-            <ul>
+            <ul class="ul-pinfo">
             <li>
                 <strong>Name:</strong> 
                 Anthony Pecoraro
@@ -83,18 +83,98 @@
         </div>
     </div>
 
-    <div>Experience</div>
+    <div class="exp">
+        <div class="exp-title">Experience</div>
 
-    <div>Projects</div>
+        <div class="exp-chase">
+            <p class="job-title">Project Manager | The Sign Shop</p>
+            <p><em>June 2024 - August 2024</em></p>
+            <p><strong>Duties:</strong></p>
+            <ul class="ul-exp">
+                <li>Coordinated and executed the installation of signage and other products from various vendors in Chase bank branches, ensuring compliance with brand standards and regulatory requirements.</li>
+                <li>Assembled and installed a variety of signage and display materials, including company logo signs, promotional graphics, and electronic displays.</li>
+                <li>Performed quality control checks to verify the accuracy and durability of installations, making adjustments as needed.</li>
+                <li>Conducted site assessments to determine optimal placement and installation methods for signage and related products.</li>
+            </ul>
+        </div>
 
-    <div>Extracurriculars</div>
+        <div class="exp-dogs">
+            <p class="job-title">Dog Walker | Tails on Trails Fitness</p>
+            <p><em>May 2024 - August 2024</em></p>
+            <p><strong>Duties:</strong></p>
+            <ul class="ul-exp">
+                <li>Managed and supervised up to twelve dogs simultaneously on hikes, ensuring their safety and well-being throughout the activity.</li>
+                <li>Conducted pre-hike assessments of dogs, including checking for health issues and ensuring all dogs were adequately hydrated and equipped with necessary gear.</li>
+                <li>Monitored and maintained group dynamics, addressing behavioral issues and ensuring positive interactions among dogs.</li>
+                <li>Ensured compliance with local regulations and park rules, including leash laws and waste disposal guidelines.</li>
+            </ul>
+        </div>
+
+        <div class="exp-lg">
+            <p class="job-title">Lifeguard | California's Great America</p>
+            <p><em>May 2018 - August 2019</em></p>
+            <p><strong>Responsibilities:</strong></p>
+            <ul class="ul-exp">
+                <li>Evaluating water conditions and assisting with customer needs at the water park
+                    and aquatics facilities.</li>
+                <li>Maintaining an in-depth knowledge of safety policies and on-site protocols in
+                    cases of emergency or need.</li>
+                <li>Engaging in effective communication with customers to strengthen customer
+                    satisfaction and loyalty.</li>
+                <li>Demonstrating abilities to deescalate emergency situations and attend to
+                    customer needs when needed.</li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="projects">
+        <div class="pjct-header">Projects</div>
+
+        <div class="pjct-main">
+            <div class="pjct-container">
+                <a href="">
+                    <div class="pjct-thumb">
+                        <div class="pjct-title">RISC-V Emulator</div>
+                        <div class="pjct-hero">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet impedit voluptas, voluptatum rerum obcaecati velit? Unde debitis mollitia soluta amet velit animi illo, perspiciatis minima explicabo quibusdam dignissimos, eum inventore!</div>
+                        <div class="pjct-langs">C, Assembly, Python</div>
+                    </div>
+                </a>
+            </div>
+
+            <div class="pjct-container">
+                <a href="">
+                    <div class="pjct-thumb">
+                        <div class="pjct-title">Indie-Link</div>
+                        <div class="pjct-hero">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam amet, dolor nesciunt dicta, facere harum nobis consequuntur animi doloribus beatae eligendi doloremque aspernatur ullam expedita minima in consectetur iusto? Nemo?</div>
+                        <div class="pjct-langs">Django, Python, SQLite</div>
+                    </div>
+                </a>
+            </div>
+
+            <div class="pjct-container">
+                <a href="">
+                    <div class="pjct-thumb">
+                        <div class="pjct-title">Personal Website</div>
+                        <div class="pjct-hero">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae in asperiores doloremque debitis dolorem harum, sint suscipit accusamus enim consequatur deleniti animi a sed corrupti incidunt minima aspernatur voluptate alias.</div>
+                        <div class="pjct-langs">HTML, CSS</div>
+                    </div>
+                </a>
+            </div>
+        </div>
+    </div>
+
+    <div class="extra">
+        <div class="extra-header">Extracurriculars</div>
+    </div>
 
     <!-- Footer -->
-     <div>Copyright © 2024 Anthony Pecoraro</div>
-     <!-- Social Links here -->
-     <a href=""><img src="" alt=""></a>
-     <a href=""><img src="" alt=""></a>
-     <a href=""><img src="" alt=""></a>
-
+    <div class="footer">
+        Copyright © 2024 Anthony Pecoraro
+        <div class="footer-social">
+            <a href="https://github.com/PecoraroAnthony" rel="noopener noreferrer" target="_blank"><img src="./img/github-logo.png" alt="github-logo"></a>
+            <a href="https://www.linkedin.com/in/pecoraroanthony/" rel="noopener noreferrer" target="_blank"><img src="./img/linkedin-icon.png" alt="linkedin-logo"></a>
+            <a href=""><img src="" alt=""></a>
+        </div>
+    </div>
  </body>
  </html>
