--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
             <div class="img-container">
                 <a href="https://github.com/PecoraroAnthony" rel="noopener noreferrer" target="_blank"><img src="./img/github-logo.png" alt="github-logo"></a>
                 <a href="https://www.linkedin.com/in/pecoraroanthony/" rel="noopener noreferrer" target="_blank"><img src="./img/linkedin-icon.png" alt="linkedin-logo"></a>
+                <a href="https://www.instagram.com/ajpeco.rar/" rel="noopener noreferrer" target="_blank"><img src="./img/instagram-logo.png" alt="instagram-logo"></a>
             </div>
         </div>
         
@@ -174,7 +175,7 @@
         <div class="footer-social">
             <a href="https://github.com/PecoraroAnthony" rel="noopener noreferrer" target="_blank"><img src="./img/github-logo.png" alt="github-logo"></a>
             <a href="https://www.linkedin.com/in/pecoraroanthony/" rel="noopener noreferrer" target="_blank"><img src="./img/linkedin-icon.png" alt="linkedin-logo"></a>
-            <a href=""><img src="" alt=""></a>
+            <a href="https://www.instagram.com/ajpeco.rar/" rel="noopener noreferrer" target="_blank"><img src="./img/instagram-logo.png" alt="instagram-logo"></a>
         </div>
     </div>
  </body>
