Modify Extracurricular Section
Added content to extracurricular section as well as making a slight tweak to the padding of the landing image.

--- a/index.html
+++ b/index.html
@@ -167,6 +167,25 @@
 
     <div class="extra">
         <div class="extra-header">Extracurriculars</div>
+
+        <!-- BLOCK -->
+        <div class="extra-blocks">
+            <div class="extra-content">
+                <img src="./img/UPE-logo.png" alt="UPE-logo">
+                <div class="extra-text">
+                    <div class="extra-header">UPE Mentorship Program</div>
+                    <div class="extra-p">P-2-UPE is a student-run, peer-to-peer program aimed to provide insight and guidance to students seeking advice and mentorship in the computing fields.<br/><br/>Thus far, I've had two mentors that have helped me discuss not only my interests in the field but also talk through my thoughts on my future. With their advice I've been able to discover more about what interests me and develop myself as a computer scientist.</div>
+                </div>
+            </div>
+
+            <!-- <div class="extra-content">
+                <img src="./img/UPE-logo.png" alt="UPE-logo">
+                <div class="extra-text">
+                    <div class="extra-header">UPE Mentorship Program</div>
+                    <div class="extra-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, aliquam minima voluptatum quasi et nobis odio dicta officiis ut? Possimus, nesciunt? Sequi excepturi aperiam eligendi delectus ipsam fuga minus amet.</div>
+                </div>
+            </div> -->
+        </div> 
     </div>
 
     <!-- Footer -->
