Adjust Biography Positioning
Minor adjustments to how my biography was positioned. Download button now better oriented with social links.

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
         </div>
         
         <div class="p-info-right">
-            <div>I'm a student of Chico State's class of 2024 now pursuing my Master's in Computer Science having received my Bachelors. I was first introduced to programming when I was a Senior in high school. Not knowing what direction I wanted to take my college career, I decided to take an introductory course in Python programming. Right then I knew that I wanted to learn more about Computer Science. Since then I have learned C++/C, JavaScript, HTML/CSS, ML/AI, Web Development, Cybersecurity and more. These days I'm working hard to become a full-stack developer. This website is a minor testament to that progress.</div>
-            <div>Aside from programming, I enjoy learning guitar and listening to new music styles. I hope to someday build an awesome guitar collection and produce my own music. I'm also a huge fan of motorsports - especially F1.</div>
+            <div>I'm a student of Chico State's class of 2024 now pursuing my Master's in Computer Science having received my Bachelors. I was first introduced to programming when I was a Senior in high school. Not knowing what direction I wanted to take my college career, I decided to take an introductory course in Python programming. Right then I knew that I wanted to learn more about Computer Science. Since then I have learned C++/C, JavaScript, HTML/CSS, ML/AI, Web Development, Cybersecurity and more. 
+                <br><br>These days I'm working hard to become a full-stack developer. This website is a minor testament to that progress. Aside from programming, I enjoy learning guitar and listening to new music styles. I hope to someday build an awesome guitar collection and produce my own music. I'm also a huge fan of motorsports - especially F1.</div>
             <div class="download-button">
                 <a href="./img/Resume - AUG2024.pdf" target="_blank" download="Anthony Pecoraro Resume">DOWNLOAD RESUME</a>
             </div>
