--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles.css">
+
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"> -->
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script> -->
+
     <title>Anthony Pecoraro's Personal Website</title>
  </head>
  <body>
@@ -47,7 +51,7 @@
             <div>I'm a student of Chico State's class of 2024 now pursuing my Master's in Computer Science having received my Bachelors. I was first introduced to programming when I was a Senior in high school. Not knowing what direction I wanted to take my college career, I decided to take an introductory course in Python programming. Right then I knew that I wanted to learn more about Computer Science. Since then I have learned C++/C, JavaScript, HTML/CSS, ML/AI, Web Development, Cybersecurity and more. 
                 <br><br>These days I'm working hard to become a full-stack developer. This website is a minor testament to that progress. Aside from programming, I enjoy learning guitar and listening to new music styles. I hope to someday build an awesome guitar collection and produce my own music. I'm also a huge fan of motorsports - especially F1.</div>
             <div class="download-button">
-                <a href="./img/Resume - AUG2024.pdf" target="_blank" download="Anthony Pecoraro Resume">DOWNLOAD RESUME</a>
+                <a href="https://drive.google.com/file/d/1psUwvNZGNyCRvSYf95i1FEBhCQ_osSUe/view?usp=sharing" target="_blank" download="Anthony Pecoraro Resume">DOWNLOAD RESUME</a>
             </div>
         </div>
     </div>
